{
  "version": 4,
  "terraform_version": "1.12.3",
  "serial": 2,
  "lineage": "4108df87-ef70-724d-cdfd-042a2d054dc7",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:417521971870:vpc/vpc-0efbfa29718e9c99c",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0981b1861dd7213e0",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0bd1baee924226f46",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0efbfa29718e9c99c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-015a4f90667961302",
            "owner_id": "417521971870",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0260fb21be1fd50db",
            "arn": "arn:aws:ec2:us-east-1:417521971870:instance/i-051a1baea893d19be",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-051a1baea893d19be",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "india-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-074e629af774466b0"
              }
            ],
            "primary_network_interface_id": "eni-074e629af774466b0",
            "private_dns": "ip-172-31-86-78.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.86.78",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02e81e68e74d87fb7",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-014222327482c67e7",
            "tags": {
              "Name": "app-server"
            },
            "tags_all": {
              "Name": "app-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0daebb7740bcabc2f"
            ]
          },
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_security_group.runner_sg",
            "data.aws_ami.amazon_linux",
            "data.aws_subnets.public",
            "data.aws_vpc.default"
          ],
          "identity": {
            "account_id": "417521971870",
            "id": "i-051a1baea893d19be",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "runner",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0260fb21be1fd50db",
            "arn": "arn:aws:ec2:us-east-1:417521971870:instance/i-059e686d7b26b8ea0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-059e686d7b26b8ea0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "india-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0fc4f69ab3387465b"
              }
            ],
            "primary_network_interface_id": "eni-0fc4f69ab3387465b",
            "private_dns": "ip-172-31-94-134.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.94.134",
            "public_dns": "ec2-32-198-7-86.compute-1.amazonaws.com",
            "public_ip": "32.198.7.86",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01c66f5ff60bf2077",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "runner-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-014222327482c67e7",
            "tags": {
              "Name": "github-runner"
            },
            "tags_all": {
              "Name": "github-runner"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07c05f9da8309bd92"
            ]
          },
          "dependencies": [
            "aws_security_group.runner_sg",
            "data.aws_ami.amazon_linux",
            "data.aws_subnets.public",
            "data.aws_vpc.default"
          ],
          "identity": {
            "account_id": "417521971870",
            "id": "i-059e686d7b26b8ea0",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:417521971870:security-group/sg-0daebb7740bcabc2f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0daebb7740bcabc2f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "App port for testing",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [],
                "description": "SSH from runner only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07c05f9da8309bd92"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "app-sg",
            "name_prefix": "",
            "owner_id": "417521971870",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-sg"
            },
            "tags_all": {
              "Name": "app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efbfa29718e9c99c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.runner_sg",
            "data.aws_vpc.default"
          ],
          "identity": {
            "account_id": "417521971870",
            "id": "sg-0daebb7740bcabc2f",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "runner_sg",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:417521971870:security-group/sg-07c05f9da8309bd92",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07c05f9da8309bd92",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "runner-sg",
            "name_prefix": "",
            "owner_id": "417521971870",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "runner-sg"
            },
            "tags_all": {
              "Name": "runner-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efbfa29718e9c99c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ],
          "identity": {
            "account_id": "417521971870",
            "id": "sg-07c05f9da8309bd92",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}